*** WooCommerce Subscriptions Core Changelog ***

= 5.5.0 - 2023-xx-xx =
* Fix - Prevent admin error notices being shown for the "subscription trial end" event that was caused by no callbacks being attached to this scheduled action. #414

= 5.4.0 - 2023-02-21 =
* Fix - Remove the recurring shipping method cache that caused bugs for third-party plugins like Conditional Shipping and Payments. #407

= 5.3.1 - 2023-02-01 =
* Fix - Fatal error when loading the Edit Subscription page with custom admin billing or shipping fields. #403

= 5.3.0 - 2023-01-26 =
* Add - Highlight subscriptions with overdue payment in list view with red icon & tooltip.
* Fix - Shipping address correctly set when resubscribing or switching subscriptions that contain different billing and shipping addresses.
* Fix - When processing customer requests to update all their subscription payment methods, ensure the updated subscription is used fetch the new payment meta, not and old instance.
* Dev - Remove deprecated `strptime` function in favour of `DateTime::createFromFormat`.
* Fix - Catch exceptions when changing payment method associated with a subscription to avoid fatal errors.

= 5.2.0 - 2023-01-23 =
* Add - New wcs_set_order_address() helper function to set an array of address fields on an order or subscription.
* Fix - Edit, add, and list Subscription admin pages now work when HPOS is enabled.
* Fix - Fixed issues where multiple subscription purchases wouldn't appear on the My Account > Subscriptions screen, on HPOS environments.
* Fix - Refactor `WCS_Meta_Box_Subscription_Data::save` to support HPOS stores, fixing a PHP warning notice when updating an order via the Edit Order screen.
* Fix - Set the `download_permissions_granted` value when purchasing a downloadable subscription product when HPOS is enabled.
* Fix - When a customer changes their address on their account or subscription, make sure the new address is saved when HPOS is enabled.